tests/baselines/reference/legacy-octal-like-invalid-00n.errors.txt
legacy-octal-like-invalid-00n.ts(27,1): error TS1121: Octal literals are not allowed. Use the syntax '0o0'.
legacy-octal-like-invalid-00n.ts(27,3): error TS1005: ';' expected.
legacy-octal-like-invalid-00n.ts(27,3): error TS2304: Cannot find name 'n'.


==== legacy-octal-like-invalid-00n.ts (3 errors) ====
    // Copyright (C) 2019 Leo Balter. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteral
    description: >
      The BigInt suffix is disallowed in LegacyOctalIntegerLiteral
    info: |
      NumericLiteral ::
        DecimalIntegerLiteral BigIntLiteralSuffix
        NumericLiteralBase BigIntLiteralSuffix
        LegacyOctalIntegerLiteral
    
      NumericLiteralBase ::
        BinaryIntegerLiteral
        OctalIntegerLiteral
        HexIntegerLiteral
    
      BigIntLiteralSuffix :: n
    features: [BigInt]
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    00n;
    ~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o0'.
      ~
!!! error TS1005: ';' expected.
      ~
!!! error TS2304: Cannot find name 'n'.
    